# lkpy

./: .copier-answers.yml  .dprint.json  .editorconfig  .flake8  .gitattributes  .gitignore  .header.yaml  .licenserc.yaml  .mailmap  .netlify  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  Cargo.toml  ExploreMovielens.ipynb  LICENSE.md  MANIFEST.in  README.md  Vagrantfile  azure-pipelines.yml  bootstrap-env.sh  codebook.toml  codecov.yml  conftest.py  demo-requirements.txt  deno.jsonc  dep2.yml  dev-env-py36.yml  dev-env-py37.yml  dev-env-py38.yml  dev-environment.yml  dev-requirements.txt  doc-requirements.txt  env.py  environment.yml  envtool.py  fetch-datasets.ps1  fetch-datasets.sh  (+28 more)
lenskit/: .gitignore  README.md  __init__.py  _cy_util.pxd  _cy_util.pyx  _mkl_ops.py  appveyor.yml  batch.py  check.py  crossfold.py  datasets.py  matrix.py  mkl_ops.c  mkl_ops.h  pyproject.toml  sharing.py  topn.py  util.py
lenskit-funksvd/: README.md  pyproject.toml
lenskit-funksvd/lenskit/: funksvd.py
lenskit-funksvd/lenskit/algorithms/: funksvd.py
lenskit-funksvd/tests/: funksvd-preds.csv  test_funksvd.py
lenskit-hpf/: README.md  pyproject.toml
lenskit-hpf/lenskit/: hpf.py
lenskit-hpf/tests/: test_hpf.py
lenskit-implicit/: pyproject.toml
lenskit-implicit/lenskit/: implicit.py
lenskit-implicit/tests/: test_implicit.py
lenskit/algorithms/: __init__.py  _funksvd.pyx  _item_knn.pyx  als.py  baselines.py  basic.py  bias.py  funksvd.py  hpf.py  implicit.py  item_knn.py  knn.py  mf_common.py  ranking.py  surprise.py  svd.py  tf.py  user_knn.py
lenskit/algorithms/als/: __init__.py  common.py  explicit.py  implicit.py
lenskit/algorithms/knn/: __init__.py  item.py  user.py
lenskit/algorithms/tf/: __init__.py  biasedmf.py  bpr.py  ibmf.py  util.py
lenskit/batch/: __init__.py  _multi.py  _predict.py  _recommend.py  _train.py  multi.py  predict.py  recommend.py
lenskit/data/: __init__.py  matrix.py  sampling.py
lenskit/datasets/: __init__.py  fetch.py  movielens.py
lenskit/lenskit/: __init__.py  __main__.py  crossfold.py  diagnostics.py  operations.py  random.py  stats.py  training.py  types.py
lenskit/lenskit/algorithms/: __init__.py  basic.py  bias.py  mf_common.py  ranking.py  svd.py
lenskit/lenskit/als/: __init__.py  _common.py  _explicit.py  _implicit.py
lenskit/lenskit/basic/: __init__.py  bias.py  candidates.py  composite.py  history.py  popularity.py  random.py  topn.py  training.py
lenskit/lenskit/batch/: __init__.py  _predict.py  _recommend.py  _results.py  _runner.py  _worker.py
lenskit/lenskit/cli/: __init__.py
lenskit/lenskit/data/: __init__.py  adapt.py  arrow.py  attributes.py  builder.py  bulk.py  checks.py  collection.py  container.py  convert.py  dataset.py  fetch.py  items.py  lazy.py  manifest.py  matrix.py  movielens.py  mtarray.py  query.py  schema.py  schemas.py  summary.py  tables.py  types.py  user.py  vocab.py
lenskit/lenskit/datasets/: __init__.py  fetch.py
lenskit/lenskit/knn/: __init__.py  item.py  user.py
lenskit/lenskit/logging/: __init__.py  _console.py  _proxy.py  config.py  monitor.py  processors.py  resource.py  tasks.py  tracing.py  worker.py
lenskit/lenskit/math/: __init__.py  solve.py  sparse.py
lenskit/lenskit/metrics/: __init__.py  _base.py  _quick.py  basic.py  bulk.py  predict.py
lenskit/lenskit/parallel/: __init__.py  config.py  invoker.py  pool.py  ray.py  sequential.py  worker.py
lenskit/lenskit/pipeline/: __init__.py  _impl.py  builder.py  common.py  components.py  config.py  nodes.py  runner.py  state.py  types.py
lenskit/lenskit/splitting/: __init__.py  holdout.py  records.py  split.py  temporal.py  types.py  users.py
lenskit/lenskit/testing/: __init__.py  _components.py  _markers.py  _movielens.py  movielens.py
lenskit/lenskit/util/: __init__.py  accum.py  array.py  debug.py  envcheck.py  logging.py  random.py  test.py  torch.py
lenskit/math/: __init__.py  blas.py  solve.py
lenskit/matrix/: __init__.py  _mkl_ops.py  mkl_ops.c  mkl_ops.h  native.py
lenskit/metrics/: __init__.py  predict.py  topn.py
lenskit/parallel/: __init__.py  chunking.py  config.py  invoker.py  pool.py  sequential.py  serialize.py  worker.py
lenskit/sharing/: __init__.py  binpickle.py  file.py  joblib.py  sharedmem.py  shm.py
lenskit/tests/: test_als_explicit.py  test_als_implicit.py  test_batch_predict.py  test_batch_recommend.py  test_bias.py  test_candidate_selector.py  test_crossfold.py  test_dataset.py  test_dataset_ids.py  test_dataset_lazy.py  test_dataset_log.py  test_dataset_matrix.py  test_dataset_stats.py  test_env_detect.py  test_fallback.py  test_itemlist.py  test_knn_item_item.py  test_knn_user_user.py  test_load_movielens.py  test_matrix.py  test_matrix_rows.py  test_ml20m.py  test_parallel.py  test_pipeline.py  test_pipeline_config.py  test_pipeline_state.py  test_pipeline_types.py  test_popular.py  test_predict_metrics.py  test_rerank.py  test_shm_serialize.py  test_split_holdout.py  test_split_ratings.py  test_split_records.py  test_split_types.py  test_split_user_holdout.py  test_split_users.py  test_svd.py  test_topn_analysis.py  test_topn_hit.py  (+12 more)
lenskit/tests/algorithms/: test_als_explicit.py  test_als_implicit.py  test_bias.py  test_candidate_selector.py  test_fallback.py  test_knn_item_item.py  test_knn_user_user.py  test_popular.py  test_svd.py  test_time_bounded_popular.py  test_util_algos.py
lenskit/tests/basic/: test_bias.py  test_candidates.py  test_composite.py  test_history.py  test_popular.py  test_random.py  test_softmax.py  test_time_bounded_popular.py  test_topn.py
lenskit/tests/batch/: test_batch_pipeline.py  test_batch_predict.py  test_batch_recommend.py
lenskit/tests/data/: test_adapt_schemas.py  (+24 more)
lenskit/util/: __init__.py  accum.py  array.py  csmatrix.pyi  csmatrix.pyx  data.py  debug.py  files.py  kvp.pyx  log.py  parallel.py  random.py  test.py  timing.py
metapackages/lenskit-funksvd/: README.md  pyproject.toml
metapackages/lenskit-hpf/: README.md  pyproject.toml
metapackages/lenskit-sklearn/: README.md  pyproject.toml
(+1059 files in other folders)
