[package]
name = "lenskit"
version = "2025.6.0"
edition = "2021"
license = "MIT"
rust-version = "1.87"

[lib]
name = "_accel"
path = "src/accel/lib.rs"
crate-type = ["cdylib"]

[dependencies]
log = { version = "^0.4", features = ["release_max_level_debug"] }
pyo3 = { version = "^0.25", features = ["extension-module", "abi3-py311"] }
pyo3-log = "^0.12"
thiserror = "^2"

rayon = "^1.10"

hashbrown = "^0.15"
hex = "^0.4"
ordered-float = "^5"
rand = "^0.9"
rand_pcg = "^0.9"
rustc-hash = "^2.1.1"
sha1 = "^0.10"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

arrow = { version = "^56", features = ["pyarrow"], default-features = false }
arrow-schema = { version = "^56", features = ["serde"] }
nalgebra = { version = "^0.34" }
ndarray = { version = "^0.16", features = ["rayon"] }
nshare = { version = "^0.10", default-features = false, features = ["ndarray", "nalgebra"] }
numpy = "^0.25"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
debug = "line-tables-only"
