[metadata]
name = lenskit
version = 0.10.1
author = Michael Ekstrand
author_email = michaelekstrand@boisestate.edu
description = Run recommender algorithms and experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lkpy.lenskit.org
license = MIT License
license_file = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
setup_requires = pytest-runner
install_requires =
    pandas >= 0.24
    numpy >= 1.16
    scipy >= 1.2
    numba >= 0.45, < 0.52
    pyarrow >= 0.15
    cffi >= 1.12.2
    binpickle >= 0.3.2
tests_require =
    pytest >= 3.9, < 6
    pytest-doctestplus
    hypothesis

[options.extras_require]
docs =
    sphinx >= 1.8
    sphinx_rtd_theme
    nbsphinx
    recommonmark
    ipython
hpf = hpfrec
implicit = implicit
sklearn = scikit-learn >= 0.22
tf = tensorflow >= 2.1
dev =
    flake8
    coverage
    pytest-cov
    ipython
demo =
    notebook
    nbval
    matplotlib
    ipywidgets
    tqdm


[options.package_data]
lenskit.matrix = *.dll, *.so, *.dylib, *.h, *.c

[aliases]
test=pytest --addopts=--verbose

[tool:pytest]
verbose=true

[build_sphinx]
build-dir=build/doc
source-dir=doc

[pep8]
max-line-length=100

[pycodestyle]
max-line-length=100

[flake8]
max-line-length=100
max-complexity=5
