[build-system]
requires = ["hatchling ~=1.0", "hatch-vcs ~=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "lenskit-funksvd"
description = "FunkSVD recommendation model for LensKit."
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = ["lenskit>=2025.1.1b11,<2025.1.1b13", "numba >= 0.56"]

[project.urls]
homepage = "https://lenskit.org"
documentation = "https://lkpy.lenskit.org"
source = "https://github.com/lenskit/lkpy"

# configure build tools
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/lenskit", "LICENSE.md", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["lenskit"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", version_scheme = "guess-next-dev" }
