[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lenskit"
description = "Toolkit for recommender systems research, teaching, and more."
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "pandas ~=2.0",
  "numpy >= 1.24",
  "scipy >= 1.10.0",
  "torch ~=2.1",                                           # conda: pytorch>=2.1,<3
  "threadpoolctl >=3.0",
  "pydantic >=2.8,<3",
  "seedbank >=0.2.0a2",                                    # conda: @pip
  "progress-api >=0.1.0a9",                                # conda: @pip
  "manylog@git+https://github.com/mdekstrand/manylog.git", # conda: @pip
]

[project.optional-dependencies]
sklearn = ["scikit-learn >= 1.1"]

[project.urls]
homepage = "https://lenskit.org"
documentation = "https://lkpy.lenskit.org"
source = "https://github.com/lenskit/lkpy"

# configure build tools
[tool.setuptools.packages.find]
include = ["lenskit*"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
root = ".."
