[build-system]
requires = ["hatchling ~=1.0", "hatch-vcs ~=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "lenskit"
description = "Toolkit for recommender systems research, teaching, and more."
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
requires-python = ">= 3.11"
readme = "README.md"
license = { file = "LICENSE.md" }
dynamic = ["version"]
dependencies = [
  "typing-extensions ~=4.12",
  "pandas ~=2.0",
  "pyarrow >=15",
  "numpy >=1.25",
  "scipy >=1.11",
  "torch ~=2.1",
  "more-itertools >=9.0",
  "threadpoolctl >=3.0",
  "structlog >=23.2",
  "rich ~=13.5",
  "pyzmq >=24",
  "pydantic ~=2.7",
  "humanize ~=4.0",
  "prettytable ~=3.14",
]

[project.optional-dependencies]
sklearn = ["scikit-learn >= 1.1"]
# test deps — keep synchronized with pixi.toml
test = [
  "pytest >=8.2,<9",
  "pytest-doctestplus >=1.2.1,<2",
  "pytest-cov >=2.12",
  "pytest-benchmark ==4.*",
  "pytest-repeat >=0.9",
  "hypothesis >=6.16",
  "pyprojroot ==0.3.*",
]

[project.urls]
homepage = "https://lenskit.org"
documentation = "https://lkpy.lenskit.org"
source = "https://github.com/lenskit/lkpy"

# configure build tools
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/lenskit", "LICENSE.md", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["lenskit"]

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", version_scheme = "guess-next-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "lenskit/_version.py"

# override where UV gets pytorch
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
