[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lenskit-hpf"
authors = [{ name = "Michael Ekstrand", email = "mdekstrand@drexel.edu" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">= 3.11"
version = "2025.1.1rc1"
dependencies = ["lenskit[hpf]>=2025.1.1b12"]

[project.urls]
homepage = "https://lenskit.org"
documentation = "https://lkpy.lenskit.org"
source = "https://github.com/lenskit/lkpy"
